welcome.lessons.welcome.variables.RunFour.scala.code
Var:estSurBiscuit=0
estSurBiscuit=estSurBiscuit+1
while(estSurBiscuit=4){
	avance()
}
	

